--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-percobaan aja
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Andriansyah</title>
+  </head>
+  <body></body>
+</html>
