refactor index.html structure and add style.css for improved design

--- a/index.html
+++ b/index.html
@@ -3,54 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio - Andriansyah</title>
-    <script src="https://cdn.tailwindcss.com"></script>
+    <title>Andriansyah</title>
 </head>
-<body class="bg-gray-900 text-white">
-    <!-- Hero Section -->
-    <section class="h-screen flex flex-col items-center justify-center text-center">
-        <h1 class="text-4xl md:text-6xl font-bold">Hi, I'm Andriansyah</h1>
-        <p class="text-lg text-gray-400 mt-4">A Passionate Programmer</p>
-        <a href="#projects" class="mt-6 px-6 py-3 bg-blue-500 rounded-lg text-lg">View My Work</a>
-    </section>
+<body>
+    <header>
+        <a href="#" class="logo">Andri</a>
 
-    <!-- About Me -->
-    <section id="about" class="py-16 px-6 text-center">
-        <h2 class="text-3xl font-semibold">About Me</h2>
-        <p class="mt-4 text-gray-400 max-w-2xl mx-auto">I am a programmer specializing in web development using modern technologies like HTML, CSS, JavaScript, and Tailwind CSS.</p>
-    </section>
-
-    <!-- Projects -->
-    <section id="projects" class="py-16 px-6">
-        <h2 class="text-3xl font-semibold text-center">Projects</h2>
-        <div class="mt-8 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
-            <div class="bg-gray-800 p-4 rounded-lg shadow-lg">
-                <h3 class="text-xl font-semibold">Project 1</h3>
-                <p class="text-gray-400">Description of project.</p>
-            </div>
-            <div class="bg-gray-800 p-4 rounded-lg shadow-lg">
-                <h3 class="text-xl font-semibold">Project 2</h3>
-                <p class="text-gray-400">Description of project.</p>
-            </div>
-        </div>
-    </section>
-
-    <!-- Skills -->
-    <section id="skills" class="py-16 px-6 text-center">
-        <h2 class="text-3xl font-semibold">Skills</h2>
-        <div class="mt-6 flex flex-wrap justify-center gap-4">
-            <span class="px-4 py-2 bg-blue-600 rounded-lg">HTML</span>
-            <span class="px-4 py-2 bg-blue-600 rounded-lg">CSS</span>
-            <span class="px-4 py-2 bg-blue-600 rounded-lg">JavaScript</span>
-            <span class="px-4 py-2 bg-blue-600 rounded-lg">Tailwind CSS</span>
-        </div>
-    </section>
-
-    <!-- Contact -->
-    <section id="contact" class="py-16 px-6 text-center">
-        <h2 class="text-3xl font-semibold">Contact Me</h2>
-        <p class="mt-4 text-gray-400">Feel free to reach out via email or social media.</p>
-        <a href="mailto:youremail@example.com" class="mt-6 px-6 py-3 bg-green-500 rounded-lg text-lg">Email Me</a>
-    </section>
+        <nav class="navbar">
+            <a href="#">Home</a>
+            <a href="#">About</a>
+            <a href="#">Skills</a>
+            <a href="#">Contact</a>
+        </nav>
+        
+    </header>
 </body>
 </html>
