--- a/index.html
+++ b/index.html
@@ -1,21 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Andriansyah</title>
-</head>
-<body>
-    <header>
-        <a href="#" class="logo">Andri</a>
+  </head>
+  <body>
+    <nav class="navbar">
+      <a href="#" class="logo">Andri</a>
 
-        <nav class="navbar">
-            <a href="#">Home</a>
-            <a href="#">About</a>
-            <a href="#">Skills</a>
-            <a href="#">Contact</a>
-        </nav>
-        
-    </header>
-</body>
+      <div class="nav-links">
+        <a href="#">Home</a>
+        <a href="#">About</a>
+        <a href="#">Skills</a>
+        <a href="#">Contact</a>
+      </div>
+    </nav>
+  </body>
 </html>
