--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
     <title>Andriansyah</title>
   </head>
   <body>
-    <nav class="navbar">
+    <header>
       <a href="#" class="logo">Andri</a>
 
-      <div class="nav-links">
+      <nav class="navbar">
         <a href="#">Home</a>
         <a href="#">About</a>
         <a href="#">Skills</a>
         <a href="#">Contact</a>
-      </div>
-    </nav>
+      </nav>
+    </header>
   </body>
 </html>
