--- a/index.html
+++ b/index.html
@@ -6,15 +6,16 @@
     <title>Andriansyah</title>
   </head>
   <body>
-    <header>
-      <a href="#" class="logo">Andri</a>
 
       <nav class="navbar">
-        <a href="#">Home</a>
-        <a href="#">About</a>
-        <a href="#">Skills</a>
-        <a href="#">Contact</a>
+        <a href="#" class="logo">Andri</a>
+
+        <div class="nav">
+          <a href="#">Home</a>
+          <a href="#">About</a>
+          <a href="#">Skills</a>
+          <a href="#">Contact</a>
+        </div>
       </nav>
-    </header>
   </body>
 </html>
