--- a/index.html
+++ b/index.html
@@ -4,18 +4,32 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Andriansyah</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <nav class="navbar">
+      <a href="#" class="logo">Andri <span>Study</span></a>
 
-      <nav class="navbar">
-        <a href="#" class="logo">Andri</a>
+      <div class="nav">
+        <a href="#home">Home</a>
+        <a href="#about">About</a>
+        <a href="#skills">Skills</a>
+        <a href="#contact">Contact</a>
+      </div>
+    </nav>
 
-        <div class="nav">
-          <a href="#">Home</a>
-          <a href="#">About</a>
-          <a href="#">Skills</a>
-          <a href="#">Contact</a>
+    <section class="hero" id="home">
+      <main class="content">
+        <h1>Hi, I'm <span>Andriansyah</span></h1>
+        <div class="typing">
+            <h3>Frontend Developer</h3>
         </div>
-      </nav>
+        <p>
+          Saya Andriansyah, seorang Frontend Developer yang berfokus pada
+          membangun antarmuka web yang responsif, interaktif, dan user-friendly.
+        </p>
+        <a href="#contact" class="btn">Contact</a>
+      </main>
+    </section>
   </body>
 </html>
