add PDF download and view buttons to index.html

--- a/index.html
+++ b/index.html
@@ -36,6 +36,15 @@
       </main>
     </section>
 
+    <section class="Tugas">
+      <button onclick="openPdf('UTS SISTEM MULTIMEDIA ANDRIANSYAH.pdf')" class="px-4 py-2 bg-blue-600 rounded hover:bg-blue-700 transition flex items-center">
+        <i class="fas fa-eye mr-2"></i> Open
+      </button>
+      <a href="UTS SISTEM MULTIMEDIA ANDRIANSYAH.pdf" download class="px-4 py-2 bg-green-600 rounded hover:bg-green-700 transition flex items-center">
+        <i class="fas fa-download mr-2"></i> Download
+      </a>
+    </section>
+
     <script src="script.js"></script>
   </body>
 </html>
