--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <div class="nav" id="nav">
         <a href="#home">Home</a>
         <a href="#about">About</a>
-        <a href="#skills">Skills</a>
+        <a href="#Akademic">Akademic</a>
         <a href="#contact">Contact</a>
       </div>
     </nav>
@@ -36,7 +36,7 @@
       </main>
     </section>
 
-    <section class="Tugas">
+    <section class="Akademic" id ="Akademic">
       <button onclick="openPdf('UTS SISTEM MULTIMEDIA ANDRIANSYAH.pdf')" class="px-4 py-2 bg-blue-600 rounded hover:bg-blue-700 transition flex items-center">
         <i class="fas fa-eye mr-2"></i> Open
       </button>
