--- a/index.html
+++ b/index.html
@@ -22,19 +22,22 @@
       </div>
     </nav>
 
-    <section class="hero" id="home">
-      <main class="content">
-        <h1>Hi, I'm <span>Andriansyah</span></h1>
-        <div class="typing">
-          <h3>Frontend Developer</h3>
-        </div>
-        <p>
-          Saya Andriansyah, seorang Frontend Developer yang berfokus pada
-          membangun antarmuka web yang responsif, interaktif, dan user-friendly.
-        </p>
-        <a href="#contact" class="btn">Contact</a>
-      </main>
+    <section class="akademic" id="akademic">
+      <div class="file-actions" style="display: flex; gap: 1rem; align-items: center; padding: 1rem;">
+        <button 
+          onclick="openPdf('UTS SISTEM MULTIMEDIA ANDRIANSYAH.pdf')" 
+          class="px-4 py-2 bg-blue-600 text-white rounded hover:bg-blue-700 transition">
+          📄 Open
+        </button>
+        <a 
+          href="UTS SISTEM MULTIMEDIA ANDRIANSYAH.pdf" 
+          download 
+          class="px-4 py-2 bg-green-600 text-white rounded hover:bg-green-700 transition">
+          ⬇️ Download
+        </a>
+      </div>
     </section>
+    
 
     <section class="Akademic" id ="Akademic">
       <button onclick="openPdf('UTS SISTEM MULTIMEDIA ANDRIANSYAH.pdf')" class="px-4 py-2 bg-blue-600 rounded hover:bg-blue-700 transition flex items-center">
