fix: correct section ID to lowercase 'akademic' in index.html

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <div class="nav" id="nav">
         <a href="#home">Home</a>
         <a href="#about">About</a>
-        <a href="#Akademic">Akademic</a>
+        <a href="#akademic">Akademic</a>
         <a href="#contact">Contact</a>
       </div>
     </nav>
@@ -36,16 +36,6 @@
           ⬇️ Download
         </a>
       </div>
-    </section>
-    
-
-    <section class="Akademic" id ="Akademic">
-      <button onclick="openPdf('UTS SISTEM MULTIMEDIA ANDRIANSYAH.pdf')" class="px-4 py-2 bg-blue-600 rounded hover:bg-blue-700 transition flex items-center">
-        <i class="fas fa-eye mr-2"></i> Open
-      </button>
-      <a href="UTS SISTEM MULTIMEDIA ANDRIANSYAH.pdf" download class="px-4 py-2 bg-green-600 rounded hover:bg-green-700 transition flex items-center">
-        <i class="fas fa-download mr-2"></i> Download
-      </a>
     </section>
 
     <script src="script.js"></script>
