--- a/index.html
+++ b/index.html
@@ -5,10 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Andriansyah</title>
     <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
   </head>
   <body>
-    <!-- Navbar -->
     <nav class="navbar">
       <a href="#" class="logo">Andri <span>Study</span></a>
       <div class="hamburger" id="hamburger">
@@ -24,44 +22,19 @@
       </div>
     </nav>
 
-    <!-- Hero Section -->
-    <section class="hero" id="home">
-      <div class="content">
-        <h1>Hi, I'm <span>Andriansyah</span></h1>
-        <div class="typing">
-          <h3>Frontend Developer</h3>
-        </div>
-        <p>Saya Andriansyah, seorang Frontend Developer yang berfokus pada membangun antarmuka web yang responsif, interaktif, dan user-friendly.</p>
-        <a href="#contact" class="btn">Contact</a>
-      </div>
-    </section>
-
-    <!-- About Section -->
-    <section class="about" id="about">
-      <div class="content">
-        <h2>About Me</h2>
-        <p>Saya memiliki pengalaman dalam pengembangan web, terutama menggunakan HTML, CSS, JavaScript, dan React. Saya bersemangat untuk terus belajar dan mengembangkan keterampilan saya.</p>
-      </div>
-    </section>
-
-    <!-- Akademic Section -->
     <section class="akademic" id="akademic">
-      <div class="file-actions">
-        <button onclick="openPdf('UTS SISTEM MULTIMEDIA ANDRIANSYAH.pdf')" class="btn-blue">📄 Open</button>
-        <a href="UTS SISTEM MULTIMEDIA ANDRIANSYAH.pdf" download class="btn-green">⬇️ Download</a>
-      </div>
-    </section>
-
-    <!-- Contact Section -->
-    <section class="contact" id="contact">
-      <div class="content">
-        <h2>Contact Me</h2>
-        <form action="#" method="POST">
-          <input type="text" name="name" placeholder="Your Name" required>
-          <input type="email" name="email" placeholder="Your Email" required>
-          <textarea name="message" placeholder="Your Message" required></textarea>
-          <button type="submit" class="btn-submit">Send Message</button>
-        </form>
+      <div class="file-actions" style="display: flex; gap: 1rem; align-items: center; padding: 1rem;">
+        <button 
+          onclick="openPdf('UTS SISTEM MULTIMEDIA ANDRIANSYAH.pdf')" 
+          class="px-4 py-2 bg-blue-600 text-white rounded hover:bg-blue-700 transition">
+          📄 Open
+        </button>
+        <a 
+          href="UTS SISTEM MULTIMEDIA ANDRIANSYAH.pdf" 
+          download 
+          class="px-4 py-2 bg-green-600 text-white rounded hover:bg-green-700 transition">
+          ⬇️ Download
+        </a>
       </div>
     </section>
 
