--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -15,29 +16,32 @@
         <span></span>
       </div>
       <div class="nav" id="nav">
-        <a href="#home">Home</a>
-        <a href="#about">About</a>
-        <a href="#akademic">Akademic</a>
-        <a href="#contact">Contact</a>
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="akademic.html">Akademic</a>
+        <a href="contact.html">Contact</a>
       </div>
     </nav>
 
-    <section class="akademic" id="akademic">
-      <div class="file-actions" style="display: flex; gap: 1rem; align-items: center; padding: 1rem;">
-        <button 
-          onclick="openPdf('UTS SISTEM MULTIMEDIA ANDRIANSYAH.pdf')" 
-          class="px-4 py-2 bg-blue-600 text-white rounded hover:bg-blue-700 transition">
-          📄 Open
-        </button>
-        <a 
-          href="UTS SISTEM MULTIMEDIA ANDRIANSYAH.pdf" 
-          download 
-          class="px-4 py-2 bg-green-600 text-white rounded hover:bg-green-700 transition">
-          ⬇️ Download
-        </a>
-      </div>
+    <section class="hero">
+      <main class="content">
+        <h1>Hi, I'm <span>Andriansyah</span></h1>
+        <div class="typing">
+          <h3>Frontend Developer</h3>
+        </div>
+        <p>
+          Saya Andriansyah, seorang Frontend Developer yang berfokus pada
+          membangun antarmuka web yang responsif, interaktif, dan user-friendly.
+        </p>
+        <a href="contact.html" class="btn">Contact</a>
+      </main>
     </section>
 
     <script src="script.js"></script>
   </body>
 </html>
+
+
+
+
+
