feat: add typewriter effect to frontend developer title and update about.html with newline

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <main class="content">
         <h1>Hi, I'm <span>Andriansyah</span></h1>
         <div class="typing">
-          <h3>Frontend Developer</h3>
+          <h3><span class="typewriter">Frontend Developer</span></h3>
         </div>
         <p>
           Saya Andriansyah, seorang Frontend Developer yang berfokus pada
@@ -40,8 +40,5 @@
     <script src="script.js"></script>
   </body>
 </html>
-
-
-
 
 
