--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -9,7 +8,7 @@
   </head>
   <body>
     <nav class="navbar">
-      <a href="#" class="logo">Andri <span>Study</span></a>
+      <a href="index.html" class="logo">Andri <span>Study</span></a>
       <div class="hamburger" id="hamburger">
         <span></span>
         <span></span>
@@ -40,5 +39,3 @@
     <script src="script.js"></script>
   </body>
 </html>
-
-
