feat: add UTS SISTEM MULTIMEDIA ANDRIANSYAH.pdf and update file paths in akademic.html

--- a/akademic.html
+++ b/akademic.html
@@ -63,12 +63,12 @@
   <section class="akademic">
     <div class="file-actions">
       <button 
-        onclick="openPdf('UTS SISTEM MULTIMEDIA ANDRIANSYAH.pdf')" 
+        onclick="openPdf('Tugas/UTS SISTEM MULTIMEDIA ANDRIANSYAH.pdf')" 
         class="btn-primary">
         📄 Open
       </button>
       <a 
-        href="UTS SISTEM MULTIMEDIA ANDRIANSYAH.pdf" 
+        href="Tugas/UTS SISTEM MULTIMEDIA ANDRIANSYAH.pdf" 
         download 
         class="btn-success">
         ⬇️ Download
