feat: restructure file actions into cards for better organization and add new file card for Tugas Pemrograman Web

--- a/akademic.html
+++ b/akademic.html
@@ -60,21 +60,52 @@
     </div>
   </nav>
 
+  
+
   <section class="akademic">
-    <div class="file-actions">
-      <button 
-        onclick="openPdf('Tugas/UTS SISTEM MULTIMEDIA ANDRIANSYAH.pdf')" 
-        class="btn-primary">
-        📄 Open
-      </button>
-      <a 
-        href="Tugas/UTS SISTEM MULTIMEDIA ANDRIANSYAH.pdf" 
-        download 
-        class="btn-success">
-        ⬇️ Download
-      </a>
+    <div class="file-cards">
+      <!-- Card for File 1 -->
+      <div class="file-card">
+        <h3>UTS Sistem Multimedia</h3>
+        <p>File UTS Sistem Multimedia</p>
+        <div class="file-actions">
+          <button 
+            onclick="openPdf('Tugas/SISTEM MULTIMEDIA ANDRIANSYAH.pdf')" 
+            class="btn-primary">
+            📄 Open
+          </button>
+          <a 
+            href="Tugas/UTS SISTEM MULTIMEDIA ANDRIANSYAH.pdf" 
+            download 
+            class="btn-success">
+            ⬇️ Download
+          </a>
+        </div>
+      </div>
+  
+      <!-- Card for File 2 (Example) -->
+      <div class="file-card">
+        <h3>Tugas Pemrograman Web</h3>
+        <p>File tugas untuk pemrograman web</p>
+        <div class="file-actions">
+          <button 
+            onclick="openPdf('Tugas_Pemrograman_Web.pdf')" 
+            class="btn-primary">
+            📄 Open
+          </button>
+          <a 
+            href="Tugas_Pemrograman_Web.pdf" 
+            download 
+            class="btn-success">
+            ⬇️ Download
+          </a>
+        </div>
+      </div>
+  
+      <!-- More file cards can go here -->
     </div>
   </section>
+  
 
   <script src="script.js"></script>
 </body>
