--- a/akademic.html
+++ b/akademic.html
@@ -85,8 +85,27 @@
   
       <!-- Card for File 2 (Example) -->
       <div class="file-card">
-        <h3>Tugas Pemrograman Web</h3>
-        <p>File tugas untuk pemrograman web</p>
+        <h3>Tugas </h3>
+        <p>File tugas </p>
+        <div class="file-actions">
+          <button 
+            onclick="openPdf('Tugas_Pemrograman_Web.pdf')" 
+            class="btn-primary">
+            📄 Open
+          </button>
+          <a 
+            href="Tugas_Pemrograman_Web.pdf" 
+            download 
+            class="btn-success">
+            ⬇️ Download
+          </a>
+        </div>
+      </div>
+
+      <!-- Card for File 3 (Example) -->
+      <div class="file-card">
+        <h3>Tugas </h3>
+        <p>File tugas </p>
         <div class="file-actions">
           <button 
             onclick="openPdf('Tugas_Pemrograman_Web.pdf')" 
