fix: update file path for UTS SISTEM MULTIMEDIA ANDRIANSYAH.pdf in akademic.html

--- a/akademic.html
+++ b/akademic.html
@@ -70,7 +70,7 @@
         <p>File UTS Sistem Multimedia</p>
         <div class="file-actions">
           <button 
-            onclick="openPdf('Tugas/SISTEM MULTIMEDIA ANDRIANSYAH.pdf')" 
+            onclick="openPdf('Tugas/UTS SISTEM MULTIMEDIA ANDRIANSYAH.pdf')" 
             class="btn-primary">
             📄 Open
           </button>
