feat: restructure HTML layout and enhance styling for better user experience

--- a/akademic.html
+++ b/akademic.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -64,7 +64,7 @@
 
   <section class="akademic">
     <div class="file-cards">
-      <!-- Card for File 1 -->
+       Card for File 1 
       <div class="file-card">
         <h3>UTS Sistem Multimedia</h3>
         <p>File UTS Sistem Multimedia</p>
@@ -83,7 +83,7 @@
         </div>
       </div>
   
-      <!-- Card for File 2 (Example) -->
+      Card for File 2 (Example) 
       <div class="file-card">
         <h3>Tugas </h3>
         <p>File tugas </p>
@@ -102,7 +102,7 @@
         </div>
       </div>
 
-      <!-- Card for File 3 (Example) -->
+       Card for File 3 (Example) 
       <div class="file-card">
         <h3>Tugas </h3>
         <p>File tugas </p>
@@ -121,11 +121,11 @@
         </div>
       </div>
   
-      <!-- More file cards can go here -->
+       More file cards can go here 
     </div>
   </section>
   
 
   <script src="script.js"></script>
 </body>
-</html>
+</html> -->
