--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <main class="content">
         <h1>Hi, I'm <span>Andriansyah</span></h1>
         <div class="typing">
-          <h3><span class="typewriter">Frontend Developer</span></h3>
+          <h3 class="typewriter-wrapper">I'm a <span class="typewriter"></span></h3>
         </div>
         <p>
           Saya Andriansyah, seorang Frontend Developer yang berfokus pada
