fix: update HTML structure and CSS for improved typewriter effect and background styling

--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
       <main class="content">
         <h1>Hi, I'm <span>Andriansyah</span></h1>
         <div class="typing">
-            <span class="typewriter"></span>
+          <h3 class="typewriter-wrapper">I'm a <span class="typewriter"></span>
+          </h3>
         </div>
         <p>
           Saya Andriansyah, seorang Frontend Developer yang berfokus pada
