--- a/index.html
+++ b/index.html
@@ -123,9 +123,9 @@
           
 
           <div class="social-icons">
-            <a href="https://github.com/andriansyah" target="_blank"><i class="fab fa-github"></i></a>
-            <a href="https://linkedin.com/in/andriansyah" target="_blank"><i class="fab fa-linkedin"></i></a>
-            <a href="https://instagram.com/andri.dev" target="_blank"><i class="fab fa-instagram"></i></a>
+            <a href="https://github.com" target="_blank"><i class="fab fa-github"></i></a>
+            <a href="https://linkedin.com" target="_blank"><i class="fab fa-linkedin"></i></a>
+            <a href="https://instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
             <a href="mailto:andri@example.com"><i class="fas fa-envelope"></i></a>
           </div>
 
