refactor: update audio format section header for improved clarity

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
       </section>      
 
       <section id="akademik">
-        <h2>Akademik - Audio Format</h2>
+        <h2>Format Audio</h2>
         <div class="audio-cards">
           <div class="audio-card">
             <audio controls>
