feat: update video sources to new Coding video files

--- a/index.html
+++ b/index.html
@@ -291,14 +291,14 @@
           <div class="video-card">
             <h3>WEBM</h3>
             <video controls>
-              <source src="video/sample.webm" type="video/webm">
+              <source src="video/Coding.webm" type="video/webm">
               Browser kamu tidak mendukung video.
             </video>
           </div>
           <div class="video-card">
             <h3>OGV</h3>
             <video controls>
-              <source src="video/sample.ogv" type="video/ogg">
+              <source src="video/Coding.ogv" type="video/ogg">
               Browser kamu tidak mendukung video.
             </video>
           </div>
@@ -312,14 +312,14 @@
           <div class="video-card">
             <h3>MKV</h3>
             <video controls>
-              <source src="video/sample.mkv" type="video/x-matroska">
+              <source src="video/Coding.mkv" type="video/x-matroska">
               Browser kamu tidak mendukung video.
             </video>
           </div>
           <div class="video-card">
             <h3>MOV</h3>
             <video controls>
-              <source src="video/sample.mov" type="video/quicktime">
+              <source src="video/Coding.mov" type="video/quicktime">
               Browser kamu tidak mendukung video.
             </video>
           </div>
