--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
       </section>
 
       <section class="image-gallery" id="gallery">
-        <h2>Galeri Format Gambar</h2>
+        <h2>10 Format Gambar</h2>
         <p class="section-subtitle">
           Berikut adalah contoh 10 format gambar populer:
         </p>
@@ -242,83 +242,83 @@
       </section>
 
       <section id="akademik">
-        <h2>Format Audio</h2>
+        <h2>10 Format Audio</h2>
         <div class="audio-cards">
           <div class="audio-card">
+            <h3>MP3</h3>
             <audio controls>
               <source src="audio/sempurna.mp3" type="audio/mpeg" />
               Browser kamu tidak mendukung pemutar audio.
             </audio>
-            <h3>MP3</h3>
           </div>
           <div class="audio-card">
+            <h3>WAV</h3>
             <audio controls>
               <source src="audio/sempurna.wav" type="audio/wav" />
               Browser kamu tidak mendukung pemutar audio.
             </audio>
-            <h3>WAV</h3>
           </div>
           <div class="audio-card">
+            <h3>FLAC</h3>
             <audio controls>
               <source src="audio/sempurna.flac" type="audio/flac" />
               Browser kamu tidak mendukung pemutar audio.
             </audio>
-            <h3>FLAC</h3>
           </div>
           <div class="audio-card">
+            <h3>AAC</h3>
             <audio controls>
               <source src="audio/sempurna.aac" type="audio/aac" />
               Browser kamu tidak mendukung pemutar audio.
             </audio>
-            <h3>AAC</h3>
           </div>
           <div class="audio-card">
+            <h3>ALAC</h3>
             <audio controls>
               <source src="audio/sempurna.m4a" type="audio/alac" />
               Browser kamu tidak mendukung pemutar audio.
             </audio>
-            <h3>ALAC</h3>
           </div>
           <div class="audio-card">
+            <h3>MKA</h3>
             <audio controls>
               <source src="audio/sempurna.mka" type="audio/x-ms-mka" />
               Browser kamu tidak mendukung pemutar audio.
             </audio>
-            <h3>MKA</h3>
           </div>
           <div class="audio-card">
+            <h3>AIFF</h3>
             <audio controls>
               <source src="audio/sempurna.aiff" type="audio/aiff" />
               Browser kamu tidak mendukung pemutar audio.
             </audio>
-            <h3>AIFF</h3>
           </div>
           <div class="audio-card">
+            <h3>OGG</h3>
             <audio controls>
               <source src="audio/sempurna.ogg" type="audio/ogg" />
               Browser kamu tidak mendukung pemutar audio.
             </audio>
-            <h3>OGG</h3>
           </div>
           <div class="audio-card">
+            <h3>AMR</h3>
             <audio controls>
               <source src="audio/sempurna.amr" type="audio/amr" />
               Browser kamu tidak mendukung pemutar audio.
             </audio>
-            <h3>AMR</h3>
           </div>
           <div class="audio-card">
+            <h3>OPUS</h3>
             <audio controls>
               <source src="audio/sempurna.opus" type="audio/opus" />
               Browser kamu tidak mendukung pemutar audio.
             </audio>
-            <h3>OPUS</h3>
           </div>
         </div>
       </section>
 
       <section id="akademik-video">
-        <h2 class="section-title">Akademik - Video Format</h2>
+        <h2 class="section-title-akademik">10 Format Video</h2>
         <div class="video-cards">
           <div class="video-card">
             <h3>MP4</h3>
