--- a/index.html
+++ b/index.html
@@ -392,6 +392,63 @@
           </div>
         </div>
       </section>
+      
+      <section class="animation-section">
+        <h2>Jenis Animasi</h2>
+        <div class="animation-cards">
+          <div class="card">
+            <video src="video/Animasi 2d.mp4" controls></video>
+            <h3>Animasi 2D</h3>
+            <p>Animasi berbasis dua dimensi yang umum digunakan pada kartun klasik dan aplikasi digital modern.</p>
+          </div>
+          <div class="card">
+            <video src="video/3d.mp4" controls></video>
+            <h3>Animasi 3D</h3>
+            <p>Animasi tiga dimensi dengan objek yang terlihat nyata, biasa digunakan dalam film, game, dan simulasi.</p>
+          </div>
+          <div class="card">
+            <video src="video/motion.mp4" controls></video>
+            <h3>Motion Graphic</h3>
+            <p>Animasi grafis seperti teks dan elemen desain yang bergerak untuk presentasi, video marketing, dll.</p>
+          </div>
+          <div class="card">
+            <video src="video/stopmotion.mp4" controls></video>
+            <h3>Stop Motion</h3>
+            <p>Animasi yang dibuat dari foto objek nyata yang digerakkan sedikit demi sedikit di setiap frame.</p>
+          </div>
+          <div class="card">
+            <video src="video/whiteboard.mp4" controls></video>
+            <h3>Whiteboard Animation</h3>
+            <p>Jenis animasi yang menyerupai gambar tangan di papan tulis, sering digunakan untuk edukasi.</p>
+          </div>
+          <div class="card">
+            <video src="video/rotoscope.mp4" controls></video>
+            <h3>Rotoscope</h3>
+            <p>Teknik mengubah video live-action menjadi animasi dengan menggambar ulang frame demi frame.</p>
+          </div>
+          <div class="card">
+            <video src="video/cutout.mp4" controls></video>
+            <h3>Cut-Out Animation</h3>
+            <p>Animasi yang menggunakan potongan gambar atau objek seperti kertas yang digerakkan.</p>
+          </div>
+          <div class="card">
+            <video src="video/infographic.mp4" controls></video>
+            <h3>Infographic Animation</h3>
+            <p>Gabungan visual data dan grafik bergerak untuk menyampaikan informasi dengan menarik dan jelas.</p>
+          </div>
+          <div class="card">
+            <video src="video/kinetic.mp4" controls></video>
+            <h3>Kinetic Typography</h3>
+            <p>Animasi teks yang bergerak dinamis, sering digunakan dalam iklan, video lirik, atau pembuka film.</p>
+          </div>
+          <div class="card">
+            <video src="video/interactive.mp4" controls></video>
+            <h3>Animasi Interaktif</h3>
+            <p>Jenis animasi yang merespons interaksi pengguna, biasa ditemukan di website dan aplikasi edukasi.</p>
+          </div>
+        </div>
+      </section>      
+      
     </section>
 
     <!-- Contact Section -->
