feat: update animation section title and adjust heading color for improved visibility

--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
       </section>
       
       <section class="animation-section">
-        <h2>Jenis Animasi</h2>
+        <h2>Jenis Animasi Pupuler</h2>
         <div class="animation-cards">
           <div class="card">
             <video src="video/Animasi 2d.mp4" controls></video>
