fix: update GitHub link to point to the correct profile

--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@
           </div>
 
           <div class="social-icons">
-            <a href="https://github.com" target="_blank"
+            <a href="https://github.com/andriansyah28" target="_blank"
               ><i class="fab fa-github"></i
             ></a>
             <a href="https://linkedin.com" target="_blank"
