feat: update video elements to autoplay, mute, and loop for enhanced user experience

--- a/index.html
+++ b/index.html
@@ -322,21 +322,21 @@
         <div class="video-cards">
           <div class="video-card">
             <h3>MP4</h3>
-            <video controls>
+            <video autoplay muted loop>
               <source src="video/Coding.mp4" type="video/mp4" />
               Browser kamu tidak mendukung video.
             </video>
           </div>
           <div class="video-card">
             <h3>WEBM</h3>
-            <video controls>
+            <video autoplay muted loop>
               <source src="video/Coding.webm" type="video/webm" />
               Browser kamu tidak mendukung video.
             </video>
           </div>
           <div class="video-card">
             <h3>M4V</h3>
-            <video controls>
+            <video autoplay muted loop>
               <source src="video/Coding.m4v" type="video/x-m4v" />
               Browser kamu tidak mendukung video.
             </video>
@@ -350,42 +350,42 @@
           </div>
           <div class="video-card">
             <h3>AVI</h3>
-            <video controls>
+            <video autoplay muted loop>
               <source src="video/Coding.avi" type="video/x-msvideo" />
               Browser kamu tidak mendukung video.
             </video>
           </div>
           <div class="video-card">
             <h3>MKV</h3>
-            <video controls>
+            <video autoplay muted loop>
               <source src="video/Coding.mkv" type="video/x-matroska" />
               Browser kamu tidak mendukung video.
             </video>
           </div>
           <div class="video-card">
             <h3>MOV</h3>
-            <video controls>
+            <video autoplay muted loop>
               <source src="video/Coding.mov" type="video/quicktime" />
               Browser kamu tidak mendukung video.
             </video>
           </div>
           <div class="video-card">
             <h3>WMV</h3>
-            <video controls>
+            <video autoplay muted loop>
               <source src="video/Coding.wmv" type="video/x-ms-wmv" />
               Browser kamu tidak mendukung video.
             </video>
           </div>
           <div class="video-card">
             <h3>FLV</h3>
-            <video controls>
+            <video autoplay muted loop>
               <source src="video/Coding.flv" type="video/x-flv" />
               Browser kamu tidak mendukung video.
             </video>
           </div>
           <div class="video-card">
             <h3>3GP</h3>
-            <video controls>
+            <video autoplay muted loop>
               <source src="video/Coding.3gp" type="video/3gpp" />
               Browser kamu tidak mendukung video.
             </video>
